# transcription

./: .gitignore  CLAUDE.md  README.md  asg_sqs_scaling_setup.md
.claude/: settings.local.json
.claude/memory/: alignment_evaluation.md  dtw_replacements.md  dtw_step_patterns.md
.claude/skills/: python-project-builder.md
.config/: README.md  config.dev.json  config.secrets.example.json  pyproject.toml  render_env.bat  render_env.py  render_env.sh
audio_manager/: .env  .env.jinja  README.md  pyproject.toml
audio_manager/src/audio_manager/: main.py  massechet_data.json  system_prompt.template.md  system_prompt.template.reasoning.md  system_prompt.template.txt
audio_manager/src/audio_manager/handlers/: media.py
audio_manager/src/audio_manager/infrastructure/: __init__.py  database_media_source.py  dependency_injection.py  gitlab_client.py  local_disk_media_source.py  s3_client.py  sqs_client.py
audio_manager/src/audio_manager/models/: __init__.py  daf_text_fetcher.py  media_source.py  schemas.py
audio_manager/src/audio_manager/services/: database.py  downloader.py  s3_uploader.py  sefaria_fetcher.py  sqs_publisher.py
gpu_instance/: .dockerignore  .env  .env.jinja  Dockerfile  README.md  pyproject.toml  user_data.sh  user_data.yaml
gpu_instance/src/gpu_instance/: __init__.py  config.py  main.py
gpu_instance/src/gpu_instance/handlers/: __init__.py  s3_handler.py  transcription.py
gpu_instance/src/gpu_instance/infrastructure/: __init__.py  dependency_injection.py  s3_client.py  sqs_client.py  text_formatter.py  timed_text_formatter.py  vtt_formatter.py
gpu_instance/src/gpu_instance/models/: __init__.py  formatter.py  schemas.py
gpu_instance/src/gpu_instance/services/: __init__.py  s3_downloader.py  s3_uploader.py  segment_collector.py  sqs_publisher.py  sqs_receiver.py  transcriber.py  utils.py  vtt_formatter.py
gpu_instance/tests/: test_handlers.py  test_infrastructure.py  test_models.py  test_services.py
gpu_timestamp/: .env.jinja  Dockerfile  README.md  pyproject.toml  user_data.yaml
gpu_timestamp/src/gpu_timestamp/: __init__.py  config.py  main.py
gpu_timestamp/src/gpu_timestamp/handlers/: __init__.py  alignment.py
gpu_timestamp/src/gpu_timestamp/infrastructure/: __init__.py  dependency_injection.py  s3_client.py  sqs_client.py
gpu_timestamp/src/gpu_timestamp/models/: __init__.py  schemas.py
gpu_timestamp/src/gpu_timestamp/services/: __init__.py  aligner.py  alignment_evaluator.py  s3_downloader.py  s3_uploader.py  sqs_receiver.py  sqs_sender.py
lambda_metric/: .env  .env.jinja  local_test.py  pyproject.toml
lambda_metric/deploy/: build.py  deploy.ps1  deploy.sh
lambda_metric/src/lambda_metric/: __init__.py  handler.py
post_inference/: .env.jinja  README.md  local_test.py  pyproject.toml
post_inference/src/post_inference/: __init__.py  config.py  handler.py
post_inference/src/post_inference/handlers/: process.py
post_inference/src/post_inference/infrastructure/: dependency_injection.py  s3_client.py  sqs_client.py
post_inference/src/post_inference/models/: schemas.py
post_inference/src/post_inference/services/: batch_result_processor.py
post_inference/src/post_inference/utils/: vtt_converter.py
transcribe_reader/: .env  .env.jinja  README.md  pyproject.toml
transcribe_reader/src/transcribe_reader/: __init__.py  main.py
transcribe_reader/src/transcribe_reader/handlers/: __init__.py  sync.py
transcribe_reader/src/transcribe_reader/infrastructure/: __init__.py  dependency_injection.py  gitlab_client.py  s3_client.py  sqs_client.py
transcribe_reader/src/transcribe_reader/models/: __init__.py  schemas.py
transcribe_reader/src/transcribe_reader/services/: database.py  gitlab_uploader.py  s3_downloader.py
transcription_reviewer/: .dockerignore  .env  .env.jinja  Dockerfile  entrypoint.py  local_test.py  local_test_gemini.py  pyproject.toml
transcription_reviewer/deploy/: build.py  deploy.ps1  deploy.sh
transcription_reviewer/src/transcription_reviewer/: __init__.py  config.py  handler.py
transcription_reviewer/src/transcription_reviewer/handlers/: __init__.py  review.py
transcription_reviewer/src/transcription_reviewer/infrastructure/: __init__.py  bedrock_batch_client.py  bedrock_client.py  dependency_injection.py  s3_client.py  sqs_client.py
transcription_reviewer/src/transcription_reviewer/models/: __init__.py  llm_pipeline.py  schemas.py
transcription_reviewer/src/transcription_reviewer/services/: __init__.py  aligner.py  bedrock_batch_pipeline.py  gemini_pipeline.py  s3_reader.py  token_counter.py  transcription_fixer.py
transcription_reviewer/src/transcription_reviewer/utils/: batch_jsonl.py  time_parser.py  vtt_converter.py
