[project]
name = "gpu-instance"
version = "0.1.0"
description = "GPU transcription worker using faster-whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.24",
    "botocore[crt]>=1.42.24",
    "faster-whisper>=1.2.1",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "pydantic>=2.0",
    "dependency-injector>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[project.scripts]
transcribe = "gpu_instance.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_instance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
