[project]
name = "gpu-timestamp"
version = "0.1.0"
description = "GPU timestamp alignment worker using stable-whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.24",
    "botocore[crt]>=1.42.24",
    "stable-ts>=2.17.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0",
    "dependency-injector>=4.0",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[project.scripts]
timestamp = "gpu_timestamp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_timestamp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
# Override old numba/llvmlite versions from openai-whisper for Python 3.12 compatibility
override-dependencies = [
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
]
