[project]
name = "lambda-metric"
version = "0.1.0"
description = "AWS Lambda for publishing SQS backlog per instance metric"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_metric"]
